# Verdana-Protocol

./: .env  README.md
Masumi-Ai Agent/vardana_protocal_ai/: README.md  pyproject.toml  report.md  setup.py
Masumi-Ai Agent/vardana_protocal_ai/src/vardana_protocal_ai/: api.py  crew.py  main.py
Masumi-Ai Agent/vardana_protocal_ai/src/vardana_protocal_ai/config/: agents.yaml  tasks.yaml
frontend/: README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/src/components/: CarbonMarket.tsx  Dashboard.tsx  DynamicMap.js  Footer.tsx  MapComponent.jsx  MapComponent.tsx  MapComponentImpl.jsx  Navbar.tsx  PlantForm.tsx  Projects.tsx  RegisterForm.tsx  Tree.tsx  TreeMap.tsx  hero-section.tsx  stats-section.tsx  wallet-connect.tsx
frontend/src/components/dashboard/: dashboard-nav.tsx  marketplace-tab.tsx  ndvi-charts.tsx  overview-tab.tsx  satellite-map.tsx  satellite-monitoring.tsx  tree-growth.tsx  tree-map.tsx  trees-tab.tsx  wallet-tab.tsx
frontend/src/components/ui/: scroll-area.tsx
frontend/src/lib/: blockchain.ts  mock-data.ts  types.ts  utils.ts
frontend/src/pages/: _app.tsx  _document.tsx  dashboard.tsx  index.tsx  marketplace.tsx  projects.tsx  register.tsx  verify.tsx
frontend/src/styles/: globals.css
smart-contract/: aiken.toml  plutus.json
smart-contract/validators/: vardano.ak
