[project]
name = "vardana_protocal_ai"
version = "0.1.0"
description = "vardana-protocal-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
vardana_protocal_ai = "vardana_protocal_ai.main:run"
run_crew = "vardana_protocal_ai.main:run"
train = "vardana_protocal_ai.main:train"
replay = "vardana_protocal_ai.main:replay"
test = "vardana_protocal_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
